# spotify_floating_lyrics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
config/: config.json
src/: app.cpp  app.h  json.cpp  json.h  lyrics.cpp  lyrics.h  main.cpp  spotify_floating_lyrics_en_GB.ts  widget.cpp  widget.h  widget.ui
